; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libxml2/extr_uri.c_xmlURIErrMemory.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libxml2/extr_uri.c_xmlURIErrMemory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@XML_FROM_URI = common dso_local global i32 0, align 4
@XML_ERR_NO_MEMORY = common dso_local global i32 0, align 4
@XML_ERR_FATAL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"Memory allocation failed : %s\0A\00", align 1
@.str.1 = private unnamed_addr constant [26 x i8] c"Memory allocation failed\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @xmlURIErrMemory to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xmlURIErrMemory(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = icmp ne i8* %3, null
  br i1 %4, label %5, label %12

5:                                                ; preds = %1
  %6 = load i32, i32* @XML_FROM_URI, align 4
  %7 = load i32, i32* @XML_ERR_NO_MEMORY, align 4
  %8 = load i32, i32* @XML_ERR_FATAL, align 4
  %9 = load i8*, i8** %2, align 8
  %10 = load i8*, i8** %2, align 8
  %11 = call i32 (i32*, i32*, i32*, i32*, i32*, i32, i32, i32, i32*, i32, i8*, i32*, i32*, i32, i32, i8*, ...) @__xmlRaiseError(i32* null, i32* null, i32* null, i32* null, i32* null, i32 %6, i32 %7, i32 %8, i32* null, i32 0, i8* %9, i32* null, i32* null, i32 0, i32 0, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), i8* %10)
  br label %17

12:                                               ; preds = %1
  %13 = load i32, i32* @XML_FROM_URI, align 4
  %14 = load i32, i32* @XML_ERR_NO_MEMORY, align 4
  %15 = load i32, i32* @XML_ERR_FATAL, align 4
  %16 = call i32 (i32*, i32*, i32*, i32*, i32*, i32, i32, i32, i32*, i32, i8*, i32*, i32*, i32, i32, i8*, ...) @__xmlRaiseError(i32* null, i32* null, i32* null, i32* null, i32* null, i32 %13, i32 %14, i32 %15, i32* null, i32 0, i8* null, i32* null, i32* null, i32 0, i32 0, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.1, i64 0, i64 0))
  br label %17

17:                                               ; preds = %12, %5
  ret void
}

declare dso_local i32 @__xmlRaiseError(i32*, i32*, i32*, i32*, i32*, i32, i32, i32, i32*, i32, i8*, i32*, i32*, i32, i32, i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
